// SPDX-FileCopyrightText: 2021-present Open Networking Foundation <info@opennetworking.org>
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package atomix.storage.protocol.gossip.map;

import "atomix/primitive/meta/object.proto";
import "atomix/storage/protocol/gossip/primitive/extensions.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

message MapEntry {
    MapKey key = 1 [(gogoproto.nullable) = false];
    MapValue value = 2;
}

message MapKey {
    atomix.primitive.meta.ObjectMeta meta = 1 [(atomix.storage.protocol.gossip.digest) = true, (gogoproto.embed) = true, (gogoproto.nullable) = false];
    string key = 2 [(atomix.storage.protocol.gossip.key) = true];
}

message MapValue {
    bytes value = 1;
    google.protobuf.Duration ttl = 2 [(gogoproto.customname) = "TTL", (gogoproto.stdduration) = true];
}
